Add profile page

--- a/AirTickets/AirTickets/AirTickets.csproj
+++ b/AirTickets/AirTickets/AirTickets.csproj
@@ -199,12 +199,14 @@
     <Compile Include="Controllers\FormController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\ViewProfileController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\ViewProfile.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -275,6 +277,7 @@
     <Content Include="Views\Home\_ContactThanks.cshtml" />
     <Content Include="Views\Home\_EmptyContact.cshtml" />
     <Content Include="Views\Home\_CarHire.cshtml" />
+    <Content Include="Views\ViewProfile\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
