--- a/AirTickets/AirTickets.Data.Model/AirTickets.Data.Model.csproj
+++ b/AirTickets/AirTickets.Data.Model/AirTickets.Data.Model.csproj
@@ -53,7 +53,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Abstracts\DataModel.cs" />
+    <Compile Include="Contracts\IAuditable.cs" />
+    <Compile Include="Contracts\IDeletable.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Ticket.cs" />
     <Compile Include="User.cs" />
   </ItemGroup>
   <ItemGroup>
