--- a/AirTickets/AirTickets.Data/AirTickets.Data.csproj
+++ b/AirTickets/AirTickets.Data/AirTickets.Data.csproj
@@ -53,6 +53,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Migrations\201710011645172_Initial.cs" />
+    <Compile Include="Migrations\201710011645172_Initial.Designer.cs">
+      <DependentUpon>201710011645172_Initial.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="MsSqlDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -66,6 +70,11 @@
       <Project>{6B9FDA05-50A0-4E0A-83F1-57A91CF6C9B3}</Project>
       <Name>AirTickets.Data.Model</Name>
     </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201710011645172_Initial.resx">
+      <DependentUpon>201710011645172_Initial.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
