--- a/AirTickets/AirTickets.Data.Model/AirTickets.Data.Model.csproj
+++ b/AirTickets/AirTickets.Data.Model/AirTickets.Data.Model.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Ticket.cs" />
     <Compile Include="User.cs" />
+    <Compile Include="ViewProfile.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
