--- a/AirTickets/AirTickets.Data.Model/AirTickets.Data.Model.csproj
+++ b/AirTickets/AirTickets.Data.Model/AirTickets.Data.Model.csproj
@@ -54,11 +54,15 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Abstracts\DataModel.cs" />
+    <Compile Include="Airline.cs" />
+    <Compile Include="Airport.cs" />
+    <Compile Include="City.cs" />
     <Compile Include="Contracts\IAuditable.cs" />
     <Compile Include="Contracts\IDeletable.cs" />
+    <Compile Include="Country.cs" />
     <Compile Include="Enum\TravelClass.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Ticket.cs" />
+    <Compile Include="Flight.cs" />
     <Compile Include="User.cs" />
     <Compile Include="ViewProfile.cs" />
   </ItemGroup>
