--- a/AirTickets/AirTickets.Data/AirTickets.Data.csproj
+++ b/AirTickets/AirTickets.Data/AirTickets.Data.csproj
@@ -65,6 +65,18 @@
     <Compile Include="Migrations\201710020614172_Update ticket model.Designer.cs">
       <DependentUpon>201710020614172_Update ticket model.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201710031210374_Fix models.cs" />
+    <Compile Include="Migrations\201710031210374_Fix models.Designer.cs">
+      <DependentUpon>201710031210374_Fix models.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201710041006069_Add models.cs" />
+    <Compile Include="Migrations\201710041006069_Add models.Designer.cs">
+      <DependentUpon>201710041006069_Add models.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201710041431189_Rename Ticket model to Flight model.cs" />
+    <Compile Include="Migrations\201710041431189_Rename Ticket model to Flight model.Designer.cs">
+      <DependentUpon>201710041431189_Rename Ticket model to Flight model.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="MsSqlDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -92,6 +104,15 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201710020614172_Update ticket model.resx">
       <DependentUpon>201710020614172_Update ticket model.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710031210374_Fix models.resx">
+      <DependentUpon>201710031210374_Fix models.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710041006069_Add models.resx">
+      <DependentUpon>201710041006069_Add models.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201710041431189_Rename Ticket model to Flight model.resx">
+      <DependentUpon>201710041431189_Rename Ticket model to Flight model.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
