--- a/AirTickets/AirTickets.Services/AirTickets.Services.csproj
+++ b/AirTickets/AirTickets.Services/AirTickets.Services.csproj
@@ -43,6 +43,7 @@
     <Compile Include="Contracts\IService.cs" />
     <Compile Include="Contracts\IFlightService.cs" />
     <Compile Include="Models\AirlineModel.cs" />
+    <Compile Include="Models\AirportModel.cs" />
     <Compile Include="Models\FlightModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FlightService.cs" />
