--- a/AirTickets/AirTickets.Services/AirTickets.Services.csproj
+++ b/AirTickets/AirTickets.Services/AirTickets.Services.csproj
@@ -47,6 +47,7 @@
     <Compile Include="Contracts\IService.cs" />
     <Compile Include="Contracts\IFlightService.cs" />
     <Compile Include="DestinationService.cs" />
+    <Compile Include="Contracts\IDestinationService.cs" />
     <Compile Include="Models\AirlineModel.cs" />
     <Compile Include="Models\AirportModel.cs" />
     <Compile Include="Models\CountryModel.cs" />
