Filter by price

--- a/AirTickets/AirTickets.Web/AirTickets.Web.csproj
+++ b/AirTickets/AirTickets.Web/AirTickets.Web.csproj
@@ -306,6 +306,7 @@
     <Content Include="Views\Flight\All.cshtml" />
     <Content Include="Views\Flight\_AllFlights.cshtml" />
     <Content Include="Views\Flight\Details.cshtml" />
+    <Content Include="Views\Flight\_FilterFlightsPartial.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
