Changes in database

--- a/AirTickets/AirTickets.Data.Model/AirTickets.Data.Model.csproj
+++ b/AirTickets/AirTickets.Data.Model/AirTickets.Data.Model.csproj
@@ -55,7 +55,8 @@
   <ItemGroup>
     <Compile Include="Abstracts\DataModel.cs" />
     <Compile Include="Airline.cs" />
-    <Compile Include="Airport.cs" />
+    <Compile Include="ArrivalAirport.cs" />
+    <Compile Include="DepartureAirport.cs" />
     <Compile Include="Contracts\IAuditable.cs" />
     <Compile Include="Contracts\IDeletable.cs" />
     <Compile Include="Country.cs" />
