--- a/AirTickets/AirTickets.Services/AirTickets.Services.csproj
+++ b/AirTickets/AirTickets.Services/AirTickets.Services.csproj
@@ -49,8 +49,9 @@
     <Compile Include="DestinationService.cs" />
     <Compile Include="Contracts\IDestinationService.cs" />
     <Compile Include="Models\AirlineModel.cs" />
-    <Compile Include="Models\AirportModel.cs" />
+    <Compile Include="Models\ArrivalAirportModel.cs" />
     <Compile Include="Models\CountryModel.cs" />
+    <Compile Include="Models\DepartureAirportModel.cs" />
     <Compile Include="Models\FlightModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FlightService.cs" />
