Add FlightController Contructor tests

--- a/AirTickets/AirTickets.Web/AirTickets.Web.csproj
+++ b/AirTickets/AirTickets.Web/AirTickets.Web.csproj
@@ -252,6 +252,11 @@
     <Content Include="ApplicationInsights.config">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </Content>
+    <None Include="Properties\PublishProfiles\AirTickets-mvc.pubxml">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Properties\PublishProfiles\bookairtickets - FTP.pubxml" />
+    <None Include="Properties\PublishProfiles\bookairtickets - Web Deploy.pubxml" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
