--- a/AirTickets/AirTickets.Web/Web.config
+++ b/AirTickets/AirTickets.Web/Web.config
@@ -10,8 +10,7 @@
   </configSections>
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=AirTickets;
-         User Id=airtickets-admin;
-          Password=password1!;" 
+         Integrated Security = true;"
          providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
