--- a/AirTickets/AirTickets.Data/AirTickets.Data.csproj
+++ b/AirTickets/AirTickets.Data/AirTickets.Data.csproj
@@ -57,12 +57,14 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Contracts\IAirTicketsData.cs" />
+    <Compile Include="Contracts\ISqlDbContext.cs" />
     <Compile Include="Migrations\Configuration.cs" />
-    <Compile Include="MsSqlDbContext.cs" />
+    <Compile Include="SqlDbContext.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repositories\EfRepository.cs" />
-    <Compile Include="Repositories\IEfRepository.cs" />
-    <Compile Include="SaveContext\ISaveContext.cs" />
+    <Compile Include="Contracts\IEfRepository.cs" />
+    <Compile Include="Contracts\ISaveContext.cs" />
     <Compile Include="SaveContext\SaveContext.cs" />
   </ItemGroup>
   <ItemGroup>
