--- a/AirTickets/AirTickets.Services/AirTickets.Services.csproj
+++ b/AirTickets/AirTickets.Services/AirTickets.Services.csproj
@@ -44,6 +44,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AirlineService.cs" />
     <Compile Include="Contracts\IService.cs" />
     <Compile Include="Contracts\IFlightService.cs" />
     <Compile Include="DestinationService.cs" />
@@ -53,6 +54,7 @@
     <Compile Include="Models\CountryModel.cs" />
     <Compile Include="Models\DepartureAirportModel.cs" />
     <Compile Include="Models\FlightModel.cs" />
+    <Compile Include="Models\MappedFlightModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="FlightService.cs" />
   </ItemGroup>
