--- a/AirTickets/AirTickets.Web/AirTickets.Web.csproj
+++ b/AirTickets/AirTickets.Web/AirTickets.Web.csproj
@@ -213,6 +213,7 @@
     <Compile Include="HttpModules\CultureModule.cs" />
     <Compile Include="Infrastructure\AjaxOnlyAttribute.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\AirportViewModel.cs" />
     <Compile Include="Models\FlightViewModel.cs" />
     <Compile Include="Models\AirlineViewModel.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
@@ -2762,6 +2763,7 @@
     <Content Include="Scripts\kendo\messages\kendo.messages.zh-CN.min.js.map" />
     <Content Include="Scripts\kendo\messages\kendo.messages.zh-HK.min.js.map" />
     <Content Include="Scripts\kendo\messages\kendo.messages.zh-TW.min.js.map" />
+    <Content Include="Views\Home\_AllAirports.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
