--- a/AirTickets/AirTickets.UnitTests/AirTickets.UnitTests.csproj
+++ b/AirTickets/AirTickets.UnitTests/AirTickets.UnitTests.csproj
@@ -107,8 +107,10 @@
     <Compile Include="AirTickets.DataServices\FlightServiceTests\Constructor_Should.cs" />
     <Compile Include="AirTickets.DataServices\FlightServiceTests\GetById_Should.cs" />
     <Compile Include="AirTickets.Web\Controllers\AccountControllerTests\Login_Should.cs" />
+    <Compile Include="AirTickets.Web\Controllers\FlightControllerTests\AllFlight_Should.cs" />
     <Compile Include="AirTickets.Web\Controllers\FlightControllerTests\Constructor_Should.cs" />
     <Compile Include="AirTickets.Web\Controllers\FlightControllerTests\Details_Should.cs" />
+    <Compile Include="AirTickets.Web\Controllers\FlightControllerTests\FilteredFlights_Should.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
