Add Home controller unit tests

--- a/AirTickets/AirTickets.UnitTests/AirTickets.UnitTests.csproj
+++ b/AirTickets/AirTickets.UnitTests/AirTickets.UnitTests.csproj
@@ -119,6 +119,8 @@
     <Compile Include="AirTickets.Web\Controllers\FlightControllerTests\Constructor_Should.cs" />
     <Compile Include="AirTickets.Web\Controllers\FlightControllerTests\Details_Should.cs" />
     <Compile Include="AirTickets.Web\Controllers\FlightControllerTests\FilteredFlights_Should.cs" />
+    <Compile Include="AirTickets.Web\Controllers\HomeControllerTests\AllAirports_Should.cs" />
+    <Compile Include="AirTickets.Web\Controllers\HomeControllerTests\Index_Should.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
