--- a/AirTickets/AirTickets.IntegrationTests/App.config
+++ b/AirTickets/AirTickets.IntegrationTests/App.config
@@ -5,8 +5,8 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.;                              Initial Catalog=LiveDemo-MVC-SIT;                              User Id=livedemo-mvc;                              Password=livedemo-mvc" providerName="System.Data.SqlClient" />
-  </connectionStrings>
+    <add name="DefaultConnection" connectionString="Data Source=.; Initial Catalog=AirTickets-IntegrationTest; Integrated Security = true;" providerName="System.Data.SqlClient" />
+  </connectionStrings> 
   <entityFramework>
     <defaultConnectionFactory type="System.Data.Entity.Infrastructure.LocalDbConnectionFactory, EntityFramework">
       <parameters>
