--- a/AirTickets/AirTickets.Web/Web.config
+++ b/AirTickets/AirTickets.Web/Web.config
@@ -9,11 +9,7 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=.; Initial Catalog=AirTickets;
-         User Id= admin;  
-         Password= admin;
-         "
-         providerName="System.Data.SqlClient" />
+    <add name="DefaultConnection" connectionString="Data Source=.; Initial Catalog=AirTickets; Integrated Security=True" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -27,7 +23,11 @@
     <compilation debug="true" targetFramework="4.5.2" />
     <httpRuntime targetFramework="4.5.2" />
     <globalization uiCulture="en" />
-  </system.web>
+  <pages>
+      <namespaces>
+        <add namespace="GridMvc" />
+      </namespaces>
+    </pages></system.web>
   <system.webServer>
     <modules>
       <remove name="FormsAuthentication" />
@@ -74,7 +74,7 @@
       </dependentAssembly>
       <dependentAssembly>
         <assemblyIdentity name="System.Web.WebPages" publicKeyToken="31bf3856ad364e35" />
-        <bindingRedirect oldVersion="1.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
+        <bindingRedirect oldVersion="0.0.0.0-3.0.0.0" newVersion="3.0.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
